<resources>
    <string name="app_name">Missings</string>
    <string name="title_activity_login">Missings</string>
    <string name="Login">Login</string>
    <string name="Usuario">User</string>
    <string name="contraseña">Password</string>
    <string name="Iniciar">Start</string>
    <string name="Personas">People</string>
    <string name="Animales">Animals</string>
    <string name="HeEncontrado">I find</string>
    <string name="HePerdido">I lost</string>
    <string name="Seleccionaunoparacontinuar">Select one to continue</string>
    <string name="Imagen">Image</string>
    <string name="Registrar">Sign</string>
    <string name="Siguiente">Next</string>
    <string name="Tipo">Type</string>
    <string name="Nombre">Name</string>
    <string name="ColorPelo">Hair color</string>
    <string name="Raza">Breed</string>
    <string name="Tamano">Size</string>
    <string name="Genero">Gender</string>
    <string name="Apellidos">Last name</string>
    <string name="Peso">Weight</string>
    <string name="Piel">Skin</string>
    <string name="Edad">Age</string>
    <string name="Altura">Height</string>
    <string name="ColorOjos">Eyes color</string>
    <string name="FechaDesaparicion">Date of missing</string>
    <string name="Provincia">Province</string>
    <string name="Guardar">Save</string>
    <string name="Peligroso">Dangerous</string>
    <string name="TipoFisico">Physic type</string>
    <string name="ColorCabello">Hair Color</string>
    <string name="Home">Home</string>
    <string name="Mapa">Map</string>
    <string name="Cerrarsesion">Logout</string>
    <string name="Localizacion">Localization</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="genero">
        <item> Masculino</item>
        <item> Femenino</item>
    </string-array>

    <string-array name="generoanimal">
        <item> Macho</item>
        <item> Hembra</item>
    </string-array>

    <string-array name="fisico">
        <item> Corpulento</item>
        <item> Delgado</item>
        <item> Promedio</item>
    </string-array>

    <string-array name="peligro">
        <item> Si</item>
        <item> No</item>
    </string-array>

    <string-array name="tipo">
        <item> Perro</item>
        <item> Gato</item>
    </string-array>

    <string-array name="tamano">
        <item> Mini</item>
        <item> Promedio</item>
        <item> Grande</item>
    </string-array>

    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_animales_maps">Map</string>
</resources>
