<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_encontrado_animal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dani_.desaparecidos.Animales.EncontradoAnimalActivity"
    android:background="@drawable/f">

    <TextView
        android:text="@string/Tipo"
        android:layout_marginBottom="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/TipoId"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textColor="?attr/colorBackgroundFloating" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/ColorPeloId"
        android:layout_alignParentStart="true"
        android:id="@+id/ColorPelo3"
        android:background="@android:color/background_light" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_below="@+id/TamanoId"
        android:layout_alignParentStart="true"
        android:id="@+id/Tamano3"
        android:layout_alignEnd="@+id/Raza3"
        android:entries="@array/tamano" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_below="@+id/GeneroId"
        android:layout_alignParentStart="true"
        android:id="@+id/Genero3"
        android:layout_alignEnd="@+id/Tamano3"
        android:entries="@array/generoanimal" />

    <ImageView
        android:layout_height="45dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginBottom="2dp"
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_alignTop="@+id/Img"
        android:layout_alignEnd="@+id/FechaDesaparicion3"
        android:layout_alignBottom="@+id/Img" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:id="@+id/FechaDesaparicion3"
        android:background="@color/cast_expanded_controller_progress_text_color"
        android:inputType="date"
        android:layout_below="@+id/FechaDesaparicionId2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:id="@+id/Nombre"
        android:inputType="text"
        android:background="@android:color/background_light"
        android:layout_below="@+id/NombreId"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Nombre"
        android:layout_width="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"
        android:id="@+id/NombreId"
        android:textColor="?attr/colorBackgroundFloating"
        android:layout_below="@+id/Tipo3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/ColorPelo"
        android:layout_width="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"
        android:id="@+id/ColorPeloId"
        android:textColor="?attr/colorBackgroundFloating"
        android:layout_below="@+id/Nombre"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Raza"
        android:layout_width="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"
        android:id="@+id/RazaId"
        android:textColor="?attr/colorBackgroundFloating"
        android:layout_below="@+id/ColorPelo3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Tamano"
        android:layout_width="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"
        android:id="@+id/TamanoId"
        android:textColor="?attr/colorBackgroundFloating"
        android:layout_below="@+id/Raza3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:id="@+id/GeneroId"
        android:textColor="?attr/colorBackgroundFloating"
        android:layout_below="@+id/Tamano3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/FechaDesaparicion"
        android:layout_width="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"
        android:id="@+id/FechaDesaparicionId2"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:layout_below="@+id/Genero3"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Img"
        android:layout_below="@+id/FechaDesaparicion3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <Button
        android:text="@string/Siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Siguiente"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Tipo3"
        android:entries="@array/tipo"
        android:layout_below="@+id/TipoId"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/Raza3"
        android:inputType="text"
        android:background="@android:color/background_light"
        android:layout_below="@+id/RazaId"
        android:layout_alignParentStart="true" />
</RelativeLayout>
