<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_encontrado_persona3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dani_.desaparecidos.Personas.EncontradoPersona3Activity"
    android:background="@drawable/f">

    <TextView
        android:text="@string/Provincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/ProvinciaId"
        android:textColor="@android:color/background_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/ProvinciaId"
        android:id="@+id/Provincia"
        android:textColor="@android:color/black"
        android:background="@android:color/background_light" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TipoFisico"
        android:entries="@array/fisico"
        android:layout_below="@+id/TipoFisicoId"
        android:layout_alignEnd="@+id/Provincia" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PeligrosoId"
        android:id="@+id/Peligroso"
        android:entries="@array/peligro"
        android:layout_alignEnd="@+id/TipoFisico" />

    <TextView
        android:id="@+id/TipoFisicoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Provincia"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/background_light"
        android:layout_alignParentStart="true"
        android:text="@string/TipoFisico" />

    <TextView
        android:text="@string/Peligroso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PeligrosoId"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/TipoFisico"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/Siguiente"
        android:layout_width="381dp"
        android:layout_height="43dp"
        android:text="@string/Siguiente"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/Siguiente"
        android:layout_toEndOf="@+id/Peligroso"
        android:layout_below="@+id/Peligroso" />

    <Button
        android:text="@string/Imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Img"
        android:layout_marginBottom="90dp"
        android:layout_above="@+id/Siguiente"
        android:layout_toEndOf="@+id/TipoFisicoId" />

</RelativeLayout>
