<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dani_.desaparecidos.LoginActivity"
    android:background="@drawable/f">


    <TextView
        android:id="@+id/Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/Usuario"
        android:textColor="?attr/colorBackgroundFloating" />

    <EditText
        android:id="@+id/NombreEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Usuario"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/ContrasenaEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:layout_below="@+id/Contraseña"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/iniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Iniciar"
        android:textSize="18sp"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/ContrasenaEdit" />

    <TextView
        android:id="@+id/Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:textColor="?attr/colorBackgroundFloating"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/NombreEdit"
        android:layout_alignParentStart="true" />
</RelativeLayout>
